syntax = "proto3";
package pb;
option go_package = "pb";

//import "google/api/annotations.proto";
//import "protoc-gen-swagger/options/annotations.proto";
import "error.proto";
import "repeatsend.proto";

// alert rule
message AlertRule {
    string alert_rule_id = 1;
    string alert_rule_name = 2;
    string alert_rule_group_id = 3;

    string metric_name = 4;

    string condition_type = 5;
    bool prefer_severity = 6;
    float threshold = 7;
    string unit = 8;
    int32 period = 9;
    int32 consecutive_count = 10;

    bool inhibit_rule_enable = 11;
    bool enable = 12;
    RepeatSend repeat_send = 13;
}

message AlertRuleGroupSpec {
    string alert_rule_group_id = 1;
    // list/delete bulid-in alert rules
    string resource_type_id = 2;
    bool system_rule = 3;
}

message AlertRuleGroupResponse {
    AlertRuleGroup alert_rule_group = 1;
    Error error = 2; //optional
}

// alert rule group
message AlertRuleGroup {
    string alert_rule_group_id = 1;
    string alert_rule_group_name = 2;
    string desc = 3;
    repeated AlertRule alert_rules = 4;
    bool system_rule = 5;
    string resource_type_id = 6;
}

service AlertRuleHandler {
    // alert rule
    rpc CreateAlertRule (AlertRuleGroup) returns (AlertRuleGroupResponse) {
    }

    rpc DeleteAlertRule (AlertRuleGroupSpec) returns (AlertRuleGroupResponse) {
    }

    rpc UpdateAlertRule (AlertRuleGroup) returns (AlertRuleGroupResponse) {
    }

    rpc GetAlertRule (AlertRuleGroupSpec) returns (AlertRuleGroupResponse) {
    }
}